Adds fade in animation on load

--- a/girl-talk/src/components/record/record.scss
+++ b/girl-talk/src/components/record/record.scss
@@ -1,4 +1,14 @@
 .v-record{
+
+    animation: fadeIn ease 2s ;
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards; 
+
+    @keyframes fadeIn {
+        0% {opacity: 0;}
+        100% {opacity: 1;}
+     }
+
     .r-wrapper{
         transform: translate(500px,500px);
 
