--- a/girl-talk/src/components/album/album.scss
+++ b/girl-talk/src/components/album/album.scss
@@ -11,3 +11,23 @@
         }
     }
 }
+
+.v-album{
+  
+    padding: 100px;
+
+    img{
+        width: 350px;
+        height: 350px;
+
+        transition: transform 0.8s ease-out;
+        transform: scale(1);
+    }
+
+    &.r-bigger{
+        img{
+            transition: transform 0.8s ease-out;
+            transform: scale(1.3);
+        }
+    }
+}
