--- a/girl-talk/src/components/album/album.scss
+++ b/girl-talk/src/components/album/album.scss
@@ -13,21 +13,20 @@
 }
 
 .v-album{
-  
     padding: 100px;
+    width: 350px;
+    height: 350px;
 
-    img{
-        width: 350px;
-        height: 350px;
-
-        transition: transform 0.8s ease-out;
-        transform: scale(1);
-    }
+    transition: transform 0.8s ease-out;
+    transform: scale(1);
 
     &.r-bigger{
-        img{
-            transition: transform 0.8s ease-out;
-            transform: scale(1.3);
-        }
+        transition: transform 0.8s ease-out;
+        transform: scale(1.3);    
+    }
+
+    &.r-screen{        
+        transition: transform 0.8s ease-out;
+        transform: scale(7);
     }
 }
