--- a/girl-talk/src/components/record/record.scss
+++ b/girl-talk/src/components/record/record.scss
@@ -39,7 +39,7 @@
         .r-time{
             transform: rotate(90deg);
             font-size: 30px;
-            fill: darkgoldenrod;
+            fill: rgb(202,153,34);
         }
 
         .r-label{
