--- a/girl-talk/src/pages/view/view.scss
+++ b/girl-talk/src/pages/view/view.scss
@@ -1,4 +1,4 @@
-.v-background{
+.r-background{
     background-size: 100%;
     position: fixed;
 
@@ -9,6 +9,22 @@
     animation-fill-mode: forwards; 
 }
 
+.r-screen{
+    background-size: 100%;
+    position: fixed;
+
+    animation: fadeIn2 ease 2s ;
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards; 
+
+    background-color: rgb(0, 0, 0);
+}
+
+
+@keyframes fadeIn2 {
+    0% {opacity: 0;}
+    100% {opacity: 0.2;}
+ }
 
 @keyframes fadeIn {
     0% {opacity: 0;}
