--- a/girl-talk/src/pages/view/view.scss
+++ b/girl-talk/src/pages/view/view.scss
@@ -30,13 +30,16 @@
 
     @media (max-width: 1000px) {
         flex-direction: column-reverse;
+
+        .r-title {
+            font-size: 2.2em !important;
+        }
     }
 
     .r-title{
         font-size: 4.0em;
         color: white;
-        min-width: 30%;
-
+    
         animation: fadeIn ease 2s ;
         animation-iteration-count: 1; 
         animation-fill-mode: forwards; 
