--- a/girl-talk/src/components/record/record.scss
+++ b/girl-talk/src/components/record/record.scss
@@ -1,3 +1,18 @@
+// thanks https://a.singlediv.com/?source=post_page
+#vinyl-record-main {
+    background: linear-gradient(50deg, rgba(255, 255, 255, 0) 40%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0) 60%), linear-gradient(-50deg, rgba(255, 255, 255, 0) 40%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0) 60%), repeating-radial-gradient(circle, #0a0a0a 0, #000 2px, #000 2px, #000 4px);
+    border-radius: 50%;
+    -webkit-box-shadow: -3px -3px 2px rgba(0,0,0,0.2);
+    box-shadow: -3px -3px 2px rgba(0,0,0,0.2);
+}
+
+#vinyl-record-inner {
+    background-color: #f5f5dc;
+    background-image: radial-gradient(circle,#333 5px,transparent 5px),-webkit-gradient(linear,left top, left bottom,color-stop(35%, #d2b48c),color-stop(35%, transparent));
+    background-image: radial-gradient(circle,#333 5px,transparent 5px),linear-gradient(to bottom,#d2b48c 35%,transparent 35%);
+    border-radius: 50%;
+}
+
 .v-record{
 
     width: 50%;
